k8s/network/01-ingress-contour.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: nginx
  namespace: test
spec:
  virtualhost:
    fqdn: recette.life.interne
  routes:
    - services:
        - name: nginx
          port: 80
