k8s/network/01-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  labels: 
    app : nginx
  namespace: test
spec:
  rules:
  - host: tanzu-tools.com
    http:
      paths:
      - pathType: ImplementationSpecific
        backend:              
          service:
            name: nginx
            port:
              number: 80
